    Duration increases when tyre slip ratio has exceeded
    "wheel_lock_threshold" value, and resets on first
    braking input of a new lap.

* Instrument Widget
  - Changed "wheel_lock_threshold" default value to "0.3".

* Trailing Widget
  - Add "show_wheel_lock" option,
    which shows wheel lock (slip ratio) plot under braking
    when slip ratio has exceeded "wheel_lock_threshold" value.
    Default "wheel_lock_threshold" value is "0.3".

* Force Module
  - Add "braking rate" calculation and output.
  - Add "max_average_g_force_reset_delay" option,
    which sets time delay (in seconds) for resetting
    max average g force. Default is "30" seconds.
  - Add "max_braking_rate_reset_delay" option,
    which sets time delay (in seconds) for resetting
    max braking rate. Default is "60" seconds.
  - Renamed "max_g_force_freeze_duration" option
    to "max_g_force_reset_delay" for consistency.

* Fuel Module
  - Add fuel "consumption history" logging and output for Fuel Calculator.
    Currently fuel log is not saved to user file, which resets after APP closed.

* [New]Wheels Module
  - "Wheels Module" now calculates and outputs wheel radius
    and slip ratio data for other modules and widgets.

* Config Window
  - Add "Spectate Mode Enabled" status notification,
    which shows when spectate mode is enabled.
    Click on the notification will show Spectate tab.
  - Add "Tools" menu, moved all editors to "Tools" menu.

2.10.1 (2024-03-13)
-----------------------------
* Deltabest Widget
  - Add "deltabest_source" option,
    which sets lap time source for deltabest display.
    Available values are:
      "Best" = all time best lap time,
      "Session" = session best lap time,
      "Stint" = stint best lap time,
      "Last" = last lap time.

* Delta Module
  - Stint deltabest now only resets if
    vehicle stops in pit lane.

* Vehicle Brand Editor & Vehicle Class Editor
  - "Add" button will now add all vehicle data
    found from current active session.