@@ -1573,6 +1573,11 @@ WIDGET_DEFAULT = {
         "wheel_lock_line_width": 6,
         "wheel_lock_line_style": 1,
         "wheel_lock_threshold": 0.3,
+        "show_wheel_slip": True,
+        "wheel_slip_color": "#FF00FF",
+        "wheel_slip_line_width": 6,
+        "wheel_slip_line_style": 1,
+        "wheel_slip_threshold": 0.1,
         "show_reference_line": True,
         "reference_line_1_style": 0,
         "reference_line_1_offset": 0.25,
