@@ -52,6 +52,12 @@ WIP
   - Add "show_wheel_lock" option,
     which shows wheel lock (slip ratio) plot under braking
     when slip ratio has exceeded "wheel_lock_threshold" value.
+    Default plot style is yellow dots.
+    Default "wheel_lock_threshold" value is "0.3".
+  - Add "show_wheel_slip" option,
+    which shows wheel slip (slip ratio) plot under acceleration
+    when slip ratio has exceeded "wheel_slip_threshold" value.
+    Default plot style is purple dots.
     Default "wheel_lock_threshold" value is "0.3".
 
 * Force Module
